# RSN_Autonomous_ShoppingCart

./: README.md
autocart_sim_codes/autocart_sim/: package.xml  setup.py
autocart_sim_codes/autocart_sim/launch/: cart_bringup.launch.py  gazebo_world.launch.py
autocart_sim_codes/autocart_sim/models/: cart.urdf
autocart_sim_codes/autocart_sim/nodes/: ekf_fusion_node.py  gps_odom_node.py  imu_odom_node.py  lane_camera_node.py  stuck_detector_node.py  waypoint_nav_node.py
autocart_sim_codes/autocart_sim/worlds/: stopandshop_brigham.world
autocart_ws/analysis/: cart_sensor_fusion_from_motion.py  generate_sim_data_low_noise.py  gps.csv  imu.csv  state_true.csv
autocart_ws/analysis_real/: export_real_mcap_to_csv.py  run_real_plots_and_ekf.py
autocart_ws/analysis_real/csv/: real_gps_all.csv  real_imu_all.csv
autocart_ws/gps_ws-20251213T165313Z-3-001/gps_ws/bag1gps/: bag1gps_0.mcap  metadata.yaml
autocart_ws/gps_ws-20251213T165313Z-3-001/gps_ws/bag2gps/: bag2gps_0.mcap  metadata.yaml
autocart_ws/gps_ws-20251213T165313Z-3-001/gps_ws/bag3gps/: bag3gps_0.mcap  metadata.yaml
autocart_ws/gps_ws-20251213T165313Z-3-001/gps_ws/src/gps_driver/: package.xml  setup.py
autocart_ws/gps_ws-20251213T165313Z-3-001/gps_ws/src/gps_driver/gps_driver/: driver.py
autocart_ws/gps_ws-20251213T165313Z-3-001/gps_ws/src/gps_driver/launch/: standalone_driver.launch.py
autocart_ws/gps_ws-20251213T165313Z-3-001/gps_ws/src/gps_interfaces/: CMakeLists.txt  package.xml
autocart_ws/imu_ws-20251213T165313Z-3-001/imu_ws/bag1imu/: bag1imu_0.mcap  metadata.yaml
autocart_ws/imu_ws-20251213T165313Z-3-001/imu_ws/bag2imu/: bag2imu_0.mcap  metadata.yaml
autocart_ws/imu_ws-20251213T165313Z-3-001/imu_ws/bag3imu/: bag3imu_0.mcap  metadata.yaml
autocart_ws/imu_ws-20251213T165313Z-3-001/imu_ws/src/imu_driver/: package.xml  setup.py
autocart_ws/imu_ws-20251213T165313Z-3-001/imu_ws/src/imu_driver/imu_driver/: driver.py
autocart_ws/imu_ws-20251213T165313Z-3-001/imu_ws/src/imu_driver/launch/: imu_driver.launch.py
autocart_ws/imu_ws-20251213T165313Z-3-001/imu_ws/test1/: metadata.yaml  test1_0.mcap
autocart_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
autocart_ws/install/autocart_sim/lib/autocart_sim/: ekf_fusion_node  gps_odom_node  imu_odom_node  lane_camera_node  stuck_detector_node  waypoint_nav_node
autocart_ws/install/autocart_sim/share/autocart_sim/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
autocart_ws/install/autocart_sim/share/autocart_sim/launch/: cart_bringup.launch.py
autocart_ws/install/autocart_sim/share/autocart_sim/models/: cart.urdf
autocart_ws/install/autocart_sim/share/autocart_sim/worlds/: stopandshop_brigham.world
autocart_ws/scripts/: demo_motion_smooth_poses.sh
autocart_ws/src/autocart_sim/: package.xml  setup.cfg  setup.py
autocart_ws/src/autocart_sim/autocart_sim/launch/: complete_sim.launch.py  gazebo_world.launch.py
autocart_ws/src/autocart_sim/autocart_sim/models/: autocart.sdf  cart.sdf  cart.urdf
autocart_ws/src/autocart_sim/autocart_sim/nodes/: ekf_fusion_node.py  gps_odom_node.py  imu_odom_node.py  lane_camera_node.py  stuck_detector_node.py  waypoint_nav_node.py
autocart_ws/src/autocart_sim/autocart_sim/worlds/: stopandshop_brigham.world
