<?xml version="1.0"?>
<package format="3">
  <name>gps_driver</name>
  <version>0.0.1</version>
  <description>GPS driver for EECE5554 Lab 1</description>
  <maintainer email="madabhushi.d@northeastern.edu">DC</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>gps_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
